--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 0.9435162544250488,
-            "y": 8.306051254272461,
-            "z": -39.285484313964844
+            "x": 6.384058952331543,
+            "y": 9.141552925109863,
+            "z": -24.242015838623047
         },
         "projection": 0,
         "target": {
-            "x": 0.6989748477935791,
-            "y": 4.5480804443359375,
-            "z": -29.808273315429688
+            "x": 6.284551620483398,
+            "y": 4.775729656219482,
+            "z": -15.026290893554688
         },
         "type": "camera",
         "up": {
@@ -219,11 +219,58 @@
         "type": "entity"
     },
     {
+        "collider_type": 0,
+        "id": 2,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "material_path": "",
+        "mesh_type": 1,
+        "model_path": "",
+        "name": "Unnamed Entity",
+        "normal_texture_path": "",
+        "position": {
+            "x": 8.59999942779541,
+            "y": 5.30000114440918,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_index": "coins collector0",
+        "script_path": "project/game/coins collector.py",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
         "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
-            "b": 133.8996124267578,
-            "g": 201.22955322265625,
+            "b": 0.0,
+            "g": 0.0,
             "r": 255.0
         },
         "cutOff": 10.0,
@@ -232,11 +279,11 @@
             "y": -1.0,
             "z": -0.289000004529953
         },
-        "id": 2,
+        "id": 0,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 0,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 16.899995803833008,
@@ -249,9 +296,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "type": "light"
     },
@@ -269,11 +316,11 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 5,
+        "id": 0,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 4.0,
