UI - Container Update

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,10 +9,10 @@ Size=400,396
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,567
-Size=370,405
+Pos=372,567
+Size=708,405
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][Code Editor Window]
 Pos=743,567
@@ -22,7 +22,7 @@ DockId=0x00000004,0
 
 [Window][Objects List]
 Pos=0,56
-Size=369,916
+Size=370,916
 Collapsed=0
 DockId=0x00000007,0
 
@@ -73,14 +73,36 @@ Pos=51,101
 Size=746,411
 Collapsed=0
 
+[Window][Code Editor]
+Pos=1082,567
+Size=370,405
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Inspector]
+Pos=1454,56
+Size=370,916
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Scene Editor]
+Pos=372,56
+Size=1080,509
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1824,916 Split=X
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x2C630E19
-  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1458,844 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1900,437 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1900,405 Split=X Selected=0xF2B1FC4A
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=369,405 Selected=0x1FC0499E
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1529,405 Selected=0xF2B1FC4A
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=440,844 Selected=0xF58E28BB
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1824,916 Split=X
+  DockNode            ID=0x00000007 Parent=0x8B93E3BD SizeRef=370,916 Selected=0x2C630E19
+  DockNode            ID=0x00000008 Parent=0x8B93E3BD SizeRef=1452,916 Split=X
+    DockNode          ID=0x00000009 Parent=0x00000008 SizeRef=1080,916 Split=X
+      DockNode        ID=0x00000005 Parent=0x00000009 SizeRef=1458,844 Split=Y
+        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1900,437 CentralNode=1 Selected=0xE8C23EBC
+        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1900,405 Split=X Selected=0xF2B1FC4A
+          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=369,405 Split=X Selected=0x1FC0499E
+            DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=708,405 Selected=0x1FC0499E
+            DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=370,405 Selected=0x529688BB
+          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1529,405 Selected=0xF2B1FC4A
+      DockNode        ID=0x00000006 Parent=0x00000009 SizeRef=440,844 Selected=0xF58E28BB
+    DockNode          ID=0x0000000A Parent=0x00000008 SizeRef=370,916 Selected=0xE7039252
 
