--- a/imgui.ini
+++ b/imgui.ini
@@ -12,31 +12,26 @@ Collapsed=0
 Pos=372,567
 Size=708,405
 Collapsed=0
-DockId=0x0000000F,0
 
 [Window][Code Editor Window]
 Pos=743,567
 Size=639,405
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Objects List]
 Pos=0,56
 Size=370,916
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Inspector Window]
 Pos=1384,56
 Size=440,916
 Collapsed=0
-DockId=0x00000006,0
 
 [Window][Scene Editor Window]
 Pos=371,56
 Size=1011,509
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Do you want to quit?]
 Pos=782,453
@@ -74,75 +69,58 @@ Size=746,411
 Collapsed=0
 
 [Window][Code Editor]
-Pos=976,573
-Size=476,399
+Pos=1170,696
+Size=282,276
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x00000006,0
 
 [Window][Inspector]
 Pos=1454,56
 Size=370,916
 Collapsed=0
-DockId=0x0000000A,0
 
 [Window][Scene Editor]
 Pos=371,56
-Size=1081,515
+Size=1081,638
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][ Inspector]
 Pos=1454,56
 Size=370,916
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000008,0
 
 [Window][ Code Editor]
 Pos=1082,567
 Size=370,405
 Collapsed=0
-DockId=0x00000010,0
 
 [Window][Assets Explorer]
 Pos=372,567
 Size=708,405
 Collapsed=0
-DockId=0x00000011,0
 
 [Window][ Objects List]
 Pos=0,56
 Size=369,916
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000001,0
 
 [Window][ Assets Explorer]
-Pos=371,573
-Size=603,399
+Pos=371,696
+Size=797,276
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1824,916 Split=X
-  DockNode                    ID=0x00000013 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
-  DockNode                    ID=0x00000014 Parent=0x8B93E3BD SizeRef=1453,916 Split=X
-    DockNode                  ID=0x0000000D Parent=0x00000014 SizeRef=1452,916 Split=X
-      DockNode                ID=0x00000007 Parent=0x0000000D SizeRef=370,916 Selected=0x2C630E19
-      DockNode                ID=0x00000008 Parent=0x0000000D SizeRef=1452,916 Split=X
-        DockNode              ID=0x00000009 Parent=0x00000008 SizeRef=1080,916 Split=X
-          DockNode            ID=0x00000005 Parent=0x00000009 SizeRef=1458,844 Split=Y
-            DockNode          ID=0x00000001 Parent=0x00000005 SizeRef=1900,515 CentralNode=1 Selected=0xE8C23EBC
-            DockNode          ID=0x00000002 Parent=0x00000005 SizeRef=1900,399 Split=X Selected=0xF2B1FC4A
-              DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=369,405 Split=X Selected=0x1FC0499E
-                DockNode      ID=0x0000000B Parent=0x00000003 SizeRef=708,405 Split=X Selected=0x1FC0499E
-                  DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=708,405 Selected=0x1FC0499E
-                  DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=370,405 Selected=0xA8B62C05
-                DockNode      ID=0x0000000C Parent=0x00000003 SizeRef=370,405 Split=X Selected=0x529688BB
-                  DockNode    ID=0x00000011 Parent=0x0000000C SizeRef=708,405 Selected=0x53D3414E
-                  DockNode    ID=0x00000012 Parent=0x0000000C SizeRef=370,405 Split=X Selected=0x529688BB
-                    DockNode  ID=0x00000015 Parent=0x00000012 SizeRef=603,405 Selected=0x567E8AAB
-                    DockNode  ID=0x00000016 Parent=0x00000012 SizeRef=476,405 Selected=0x529688BB
-              DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1529,405 Selected=0xF2B1FC4A
-          DockNode            ID=0x00000006 Parent=0x00000009 SizeRef=440,844 Selected=0xF58E28BB
-        DockNode              ID=0x0000000A Parent=0x00000008 SizeRef=370,916 Selected=0xE7039252
-    DockNode                  ID=0x0000000E Parent=0x00000014 SizeRef=370,916 Selected=0x7C689C01
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1824,916 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1453,916 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=1080,916 Split=Y
+      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1824,638 CentralNode=1 Selected=0xE8C23EBC
+      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1824,276 Split=X Selected=0x567E8AAB
+        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=796,399 Selected=0x567E8AAB
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=282,399 Selected=0x529688BB
+    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=370,916 Selected=0x7C689C01
 
